--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    command: yarn start:dev
+    # command: yarn start:dev
     volumes:
       - .:/app/
       - /app/node_modules
